<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/radius"
            android:text="@string/label_update" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/radius"
            android:text="@string/label_play" />
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/radius"
            android:text="@string/label_stop" />
        <Button
            android:id="@+id/btn_clear_console"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/radius"
            android:text="@string/label_clear_console" />
        <Button
            android:id="@+id/btn_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/radius"
            android:text="@string/label_forward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:orientation="vertical">
	
        <!-- 
		 -->
    <LinearLayout
        android:id="@+id/linearlayout_v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/set_sex_bg"
        android:orientation="horizontal">

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="3dp"
	            android:text="@string/label_choose_date"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@android:color/black" />

	        <Spinner
	            android:id="@+id/spin_date"
	            android:layout_marginTop="2dp"
	            android:layout_marginRight="2dp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
		</LinearLayout>
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/default_img" 
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_name"
            android:background="@color/black" />
        
        
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/black" android:visibility="gone">
        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        
            <TextView
                android:id="@+id/text_show_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="45.30"
		        android:layout_marginLeft="10dp"
                android:text="@string/label_tmp_show_log"
                android:textColor="@android:color/white"/>
            </LinearLayout>
    </ScrollView>
        

    </LinearLayout>

</LinearLayout>