<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:gravity="center|left" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start" 
            android:layout_marginBottom="0dp"/>

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_play" />

        <Button
            android:id="@+id/btn_clear_console"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_clear_console" />

        <Spinner
            android:id="@+id/spin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:visibility="gone"
        android:background="@android:color/black">
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="0dp"
	        android:src="@drawable/default_img" />

    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:background="@android:color/black">
        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/text_show_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="45.30"
                android:text="@string/label_tmp_show_log"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>